Fix height styles
image was leaving white space at bottom of viewport when width was
decreased

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@
 }
 
 html, body {
-    height: 100%;
+    max-height: 100vh;
     width: 100%;
 }
 
@@ -58,7 +58,7 @@ body {
     justify-content: center;
     overflow: hidden;
     position: relative;
-    height: 100vh;      
+    min-height: 100vh;      
 }
 .link {
     position: absolute;
@@ -87,7 +87,7 @@ a {
     color: white;
     background-color: rgba(0, 0, 0, 0.55);
     font-family: 'italianaregular';
-    padding: 0.5em 0 0.5em 0;
+    padding: 0.5em;
 }
 .img {
     flex: 1;
@@ -127,7 +127,7 @@ a {
     font-size: 1.3em;
     font-weight: 600;
     margin-right: 5em;
-    margin-top: 0;
+    margin-top: 1em;
 }
 .form {
     flex-direction: column;
